refactoring register handler
